# subhft

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .importlinter  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README_AI.md  ROADMAP.md  coverage.xml  docker-compose.chdata.yml  docker-compose.dev.yml  docker-compose.lowlatency.yml  docker-compose.network.yml  docker-compose.prod.locked.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.stress.yml  docker-compose.test.yml  docker-compose.yml  docker-stack.yml  final_symbols.yaml  inspect_shioaji.py  ops.sh  pyproject.toml  requirements.txt  run_log.txt  run_log_3.txt
${ARXIV_STORAGE_PATH}/: 0803.1769v1.md  0904.0900.md  1006.1882v2.md  1011.6402v3.md  1105.3115.md  1204.1381v1.md  1206.4810.md  1211.6667v1.md  1310.2033.md  1310.8169.md  1311.5661v1.md  1402.1288.md  1407.3390.md  1503.06704v2.md  1602.00731.md  1609.00599.md  1609.05177v1.md  1701.03960.md  1808.09677v2.md  1811.05230.md  1907.06151.md  1907.06230v2.md  1908.02847.md  1909.09495v1.md  2006.07847v4.md  2006.08307v1.md  2105.09140v3.md  2112.02947v1.md  2112.03789v2.md  2112.09015.md  2112.13213v4.md  2201.09319.md  2201.09319v1.md  2208.13654v1.md  2303.02038v2.md  2303.08867v4.md  2304.02472.md  2305.06704v3.md  2306.02764v1.md  2307.02375v2.md  (+38 more)
.agent/: 00-MANIFEST.md  CHANGELOG.md  agent-docs-known-drift.txt
.agent/agents/: ops-analyst.md
.agent/contexts/: dev.md  research.md  review.md
.ci/: large-files-baseline.txt
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.runtime/: position_checkpoint.json
agents/: perf-reviewer.md  quant-architect.md
certs/: .gitkeep
commands/: learn.md  plan.md  run-sim.md
config/: README.md  clickhouse_backup.xml  clickhouse_init_users.sh  clickhouse_init_users.sql  clickhouse_memory.xml  clickhouse_storage.xml  clickhouse_system_logs.xml  execution.yaml  exported_settings.json  feature_profiles.yaml  order_adapter.yaml  recorder.yaml  risk.yaml  settings.json  strategies.yaml  strategy_limits.yaml  symbols.list  symbols.yaml  test_adapter.yaml  test_limits.yaml  watchlist.yaml  watchlist_live.yaml
config/base/: main.yaml  (+10 more)
contexts/: README.md  dev.md  incident.md  ops.md  research.md  review.md
contracts/: market_event.md
docs/: AI_DEVELOPER_CHEAT_SHEET.md  ARCHITECTURE.md  DELETION_LOG.md  MODULES_REFERENCE.md  README.md  TODO.md  azure_deployment.md  cli_reference.md  config_reference.md  cost_analysis.md  deploy_azure.md  deployment_guide.md  feature_guide.md  feed_adapter.md  getting_started.md  hft_low_latency_runbook.md  hftbacktest_integration.md  loop_v1_stabilization_charter.md  loop_v1_stabilization_log.md  naming_conventions.md  observability_minimal.md  onboarding.md  ops_change_control.md  outputs_and_artifacts.md  performance_report.md  project_full_reference.md  project_layout.md  quickstart.md  runbooks.md  strategy-guide.md  troubleshooting.md
mcp-configs/: README.md  mcp-servers.json
notebooks/: README.md  Start_Here.ipynb  hft_walkthrough.ipynb  sample_events.jsonl  sample_feed.npz
ops/: check-heartbeat.sh  deploy_azure.sh  hft-engine.service  host_tuning.sh  monitor_latency.py  setup_hugepages.sh  setup_isolation.sh  setup_vm.sh  time_sync_check.sh  wait-for-healthy.sh
outputs/: t1a_regime_partition_scorecard_2026_05_19.json  t1a_zero_event_diagnostic_2026_05_19.json  t1a_zero_event_diagnostic_fixed_2026_05_19.json
research/: README.md  SOP.md  __init__.py  __main__.py  alpha_lab.py  factory.py  pipeline.py
results/: regime_summary.csv
rules/: README.md  testing.md
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  rl.rs  total_depth.rs
rust_core/: AGENTS.md  Cargo.toml
rust_core/benches/: hotpath.rs
rust_core/src/: alpha.rs  alpha_flow.rs  alpha_markov.rs  alpha_meta.rs  alpha_ofi.rs  alpha_pressure.rs  alpha_reversal.rs  alpha_transient.rs  backtest_kernels.rs  book_state.rs  bus.rs  circuit_breaker.rs  columnar_buffer.rs  dedup.rs  exposure.rs  fast_lob.rs  feature.rs  feature_engine.rs  gateway_fused.rs  ipc.rs  lib.rs  lob.rs  md_event_frame.rs  metrics_sampler.rs  normalizer_bidask.rs  normalizer_feature_fused.rs  normalizer_lob_fused.rs  normalizer_tick.rs  positions.rs  record_mapper.rs  risk.rs  risk_validator.rs  shm_snapshot.rs  storm_guard.rs  strategy.rs  symbol_intern.rs  timeutil.rs  typed_ring.rs
rust_core/src/bus/: event_bus.rs  mod.rs  ring_bidask.rs  ring_generic.rs  ring_lob.rs  ring_tick.rs
rust_core/src/fast_lob/: mod.rs  normalize_bidask.rs  normalize_tick.rs  scale.rs  stats.rs
scripts/: _notify.sh  a1_day_decomposition.py  agent_session.sh  alert_handler_webhook.py  alert_test.py  arch_conformance_gate.py  auto_release_orchestrator.py  backfill_historical_ticks.py  batch_create_snapshots.py  benchmark_alpha.py  benchmark_gate.py  benchmark_ipc.py  callback_latency_guard.py  capture_post_b_baseline.py  capture_pre_b_baseline.py  ch_query_guard.py  ch_query_guard_suite.py  check_agent_docs.py  check_coverage_domains.py  check_discipline.py  check_git_preconditions.sh  check_test_assertions.py  check_test_collection.py  check_test_hygiene.py  check_test_naming.py  check_test_quality_patterns.py  check_zero_assertion_tests.py  clickhouse_backup.sh  clickhouse_restore.sh  clickhouse_restore_verify.sh  code_canary_gate.py  compare_r47_latency.py  create_snapshot.py  daily-backup.sh  daily_data_quality.py  daily_reconcile.py  debug_hbt_init.py  debug_lob_minimal.py  deploy.sh  deploy_drift_guard.py  (+63 more)
sinotrade_tutor_md/: limit.md
specs/: hft_simulation_architecture.md
strategies/: DemoStrategy.py  MyNewStrat.py  alpha_deep_hawkes.py  alpha_hawkes.py  alpha_mhp.py  alpha_ofi.py  alpha_propagator.py
tests/: AGENTS.md  benchmark_io.py  benchmark_pipeline.py  conftest.py  test_core.py  test_execution_flow.py  test_failure_drills.py  test_lob_engine.py  test_recorder_pipeline.py  test_risk_order.py  test_strategy_sdk.py
(+4433 files in other folders)
