[project]
name = "hft-platform"
version = "0.1.0"
description = "High Frequency Trading Platform"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "clickhouse-connect",
    "structlog",
    "msgspec",
    "uvloop",
    "hftbacktest",
    "shioaji[speed]",
    "prometheus_client",
    "psutil",
    "PyYAML",
    "make>=0.1.6.post2",
    "joblib>=1.5.3",
    "numba>=0.61",
    "python-dotenv>=1.2.1",
]

[project.scripts]
hft = "hft_platform.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "maturin", # Kept for future
    "notebook",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.14.10",
    "mypy>=1.10.0",
    "hypothesis>=6.148.7",
    "pre-commit>=3.7.0",
    "pytest-benchmark>=4.0.0",
]

research = [
    "gymnasium>=1.2.3",
    "stable-baselines3>=2.7.1",
    "shimmy>=2.0.0",
    "optuna>=4.7.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.6.0",
    "torch>=2.10.0",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hft_platform"]

[tool.pytest.ini_options]
addopts = "--cov=src/hft_platform --cov-branch --cov-report=term-missing"
norecursedirs = [
    "research",
    ".venv",
    "data",
    "examples",
    "scripts",
]
markers = [
    "blackbox: black-box CLI/system interface tests",
    "regression: regression tests for fixed defects",
    "stress: stress and load tests",
    "system: docker-compose backed system tests",
    "acceptance: end-to-end acceptance tests",
    "integration: integration tests",
]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated.*:pydantic.PydanticDeprecatedSince20:shioaji\\.contracts",
]

[tool.coverage.run]
omit = [
    "src/hft_platform/__main__.py",
    "src/hft_platform/feed_adapter/shioaji_client.py",
    "src/hft_platform/execution/gateway.py",
    "src/hft_platform/execution/positions.py",
    "src/hft_platform/execution/router.py",
    "src/hft_platform/strategies/*",
    "src/hft_platform/strategies/**",
    "src/hft_platform/services/bootstrap.py",
    "src/hft_platform/services/system.py",
]

[tool.coverage.report]
fail_under = 70

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hft_platform.rust_core"
python-source = "src"
manifest-path = "rust_core/Cargo.toml"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "research",
    "research/**",
    "scripts",
    "scripts/**",
    "tests",
    "tests/**",
    "examples",
    "examples/**",
    "config/agent_system",
    "config/agent_system/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"] # pycodestyle, pyflakes, isort
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "E402", "F841", "E722", "E701"]
"scripts/**/*.py" = ["E501", "E402"]
"src/hft_platform/research/**/*.py" = ["E501", "E402", "F841", "E722"]
"src/hft_platform/feed_adapter/shioaji_client.py" = ["E501"]
"src/hft_platform/observability/metrics.py" = ["F401"]
"src/hft_platform/features/**/*.py" = ["E501"]
"src/hft_platform/config/wizard.py" = ["E501"]
"src/hft_platform/cli.py" = ["F841", "F401", "E501"]
"src/hft_platform/backtest/reporting.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
disable_error_code = ["import-untyped"]
files = [
    "src/hft_platform/contracts",
    "src/hft_platform/events.py",
    "src/hft_platform/execution",
    "src/hft_platform/order",
    "src/hft_platform/strategy",
    "src/hft_platform/services",
    "src/hft_platform/engine",
    "src/hft_platform/feed_adapter/normalizer.py",
    "src/hft_platform/feed_adapter/lob_engine.py",
    "src/hft_platform/risk",
    "src/hft_platform/utils/metrics.py",
    "src/hft_platform/config/loader.py",
]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]
