[project]
name = "hft-platform"
version = "0.1.0"
description = "High Frequency Trading Platform"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2,<3",
    "pandas>=2.3,<3",
    "clickhouse-connect>=0.10,<1",
    "structlog>=25.1,<26",
    "msgspec>=0.20,<1",
    "uvloop>=0.22,<1",
    "hftbacktest>=2.4,<3",
    "shioaji[speed]>=1.2,<2",
    "prometheus_client>=0.23,<1",
    "psutil>=7.1,<8",
    "PyYAML>=6.0,<7",
    "make>=0.1.6.post2",
    "joblib>=1.5.3,<2",
    "numba>=0.61,<1",
    "python-dotenv>=1.2.1,<2",
    "scipy>=1.15.3,<2",
    "exchange-calendars>=4.13.1,<5",
    "orjson>=3.10,<4",
    "optuna>=4.7.0,<5",
]

[project.scripts]
hft = "hft_platform.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "maturin", # Kept for future
    "notebook",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.14.10",
    "mypy>=1.10.0",
    "hypothesis>=6.148.7",
    "bandit[toml]>=1.7.5",
    "pre-commit>=3.7.0",
    "pytest-benchmark>=4.0.0",
    "pyarrow>=23.0.1",
]

research = [
    "gymnasium>=1.2.3",
    "stable-baselines3>=2.7.1",
    "shimmy>=2.0.0",
    "optuna>=4.7.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.6.0",
    "torch>=2.10.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.0",  # BDS independence test (lazy import in validation.py)
]

[project.optional-dependencies]
shioaji-broker = ["shioaji[speed]"]  # Shioaji (SinoPac) broker SDK
fubon = ["fubon-neo>=2.2.7"]  # Fubon broker SDK (not on PyPI; install from Fubon's index)
monitor = ["rich>=13.0"]  # Signal monitor TUI (rich.live + rich.table)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hft_platform"]

[tool.pytest.ini_options]
addopts = "--cov=src/hft_platform --cov-branch --cov-report=term-missing --timeout=30"
norecursedirs = [
    "research",
    ".venv",
    "data",
    "examples",
    "scripts",
]
markers = [
    "blackbox: black-box CLI/system interface tests",
    "regression: regression tests for fixed defects",
    "stress: stress and load tests",
    "system: docker-compose backed system tests",
    "acceptance: end-to-end acceptance tests",
    "integration: integration tests",
    "chaos: chaos and fault injection tests",
    "load: load and throughput tests (WU-12)",
    "bench: latency regression benchmarks (WU-19)",
]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated.*:pydantic.PydanticDeprecatedSince20:shioaji\\.contracts",
]
timeout = 30

[tool.hypothesis]
max_examples = 50

[tool.coverage.run]
omit = [
    "src/hft_platform/__main__.py",
    "src/hft_platform/config/symbols.py",
    "src/hft_platform/feed_adapter/shioaji_client.py",
    "src/hft_platform/feed_adapter/shioaji/*",
    "src/hft_platform/recorder/loader.py",
]

[tool.coverage.report]
# Roadmap: 70 (Phase 2, current) → 80 (Phase 3). See .agent/rules/50-testing.md
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hft_platform.rust_core"
python-source = "src"
manifest-path = "rust_core/Cargo.toml"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "research",
    "research/**",
    "scripts",
    "scripts/**",
    "examples",
    "examples/**",
    "config/agent_system",
    "config/agent_system/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C901", "B"] # pycodestyle, pyflakes, isort, mccabe, bugbear
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["hft_platform", "research"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "E402", "F841", "E701", "E731", "E712", "E741", "F821", "B", "C901"]
"scripts/**/*.py" = ["E501", "E402"]
"src/hft_platform/research/**/*.py" = ["E501", "E402", "F841", "E722"]
"src/hft_platform/feed_adapter/shioaji_client.py" = ["E501"]
"src/hft_platform/observability/metrics.py" = ["F401"]
"src/hft_platform/features/**/*.py" = ["E501"]
"src/hft_platform/config/wizard.py" = ["E501"]
"src/hft_platform/cli.py" = ["F841", "F401", "E501", "C901"]
"src/hft_platform/backtest/reporting.py" = ["E501"]
# C901 existing violations (max-complexity=15) — tracked for future cleanup
"src/hft_platform/alpha/_gate_a.py" = ["C901"]
"src/hft_platform/alpha/dashboard.py" = ["C901"]
"src/hft_platform/alpha/validation.py" = ["C901"]
"src/hft_platform/cli/_alpha.py" = ["C901"]
"src/hft_platform/config/_symbols_contracts.py" = ["C901"]
"src/hft_platform/config/_symbols_expansion.py" = ["C901", "B"]
"src/hft_platform/config/_symbols_filters.py" = ["C901", "B"]
"src/hft_platform/config/_symbols_parsing.py" = ["C901"]
"src/hft_platform/engine/event_bus.py" = ["C901"]
"src/hft_platform/execution/router.py" = ["C901"]
"src/hft_platform/feed_adapter/lob_engine.py" = ["C901"]
"src/hft_platform/feed_adapter/normalizer.py" = ["C901", "B"]
"src/hft_platform/feed_adapter/shioaji/client.py" = ["C901"]
"src/hft_platform/feed_adapter/shioaji/contracts_runtime.py" = ["C901"]
"src/hft_platform/feed_adapter/shioaji/quote_runtime.py" = ["C901"]
"src/hft_platform/feed_adapter/shioaji/reconnect_orchestrator.py" = ["C901"]
"src/hft_platform/feed_adapter/shioaji/router.py" = ["C901"]
"src/hft_platform/feed_adapter/shioaji/session_runtime.py" = ["C901", "B"]
"src/hft_platform/gateway/service.py" = ["C901"]
"src/hft_platform/monitor/_config_loader.py" = ["C901"]
"src/hft_platform/monitor/_detail_panel.py" = ["C901"]
"src/hft_platform/monitor/_engine.py" = ["C901"]
"src/hft_platform/monitor/_events.py" = ["C901"]
"src/hft_platform/monitor/_tui.py" = ["C901"]
"src/hft_platform/order/adapter.py" = ["C901"]
"src/hft_platform/recorder/_loader_batch.py" = ["C901"]
"src/hft_platform/recorder/_loader_wal.py" = ["C901"]
"src/hft_platform/recorder/wal.py" = ["C901"]
"src/hft_platform/recorder/writer.py" = ["C901", "B"]
"src/hft_platform/services/_md_feature_shadow.py" = ["C901", "B"]
"src/hft_platform/services/_md_normalize.py" = ["C901"]
"src/hft_platform/services/bootstrap.py" = ["C901", "B"]
"src/hft_platform/services/market_data.py" = ["C901", "B"]
"src/hft_platform/services/system.py" = ["C901"]
"src/hft_platform/strategy/runner.py" = ["C901", "B"]
# B (bugbear) existing violations
"src/hft_platform/alpha/pool.py" = ["B"]
"src/hft_platform/backtest/adapter.py" = ["B"]
"src/hft_platform/backtest/runner.py" = ["B"]
"src/hft_platform/execution/reconciliation.py" = ["B"]
"src/hft_platform/feature/engine.py" = ["B"]
"src/hft_platform/feature/kernel.py" = ["B"]
"src/hft_platform/features/entropy.py" = ["B"]
"src/hft_platform/features/fractal.py" = ["B"]
"src/hft_platform/features/liquidity.py" = ["B"]
"src/hft_platform/feed_adapter/subscription_state.py" = ["B"]
"src/hft_platform/recorder/worker.py" = ["B"]
"src/hft_platform/risk/fast_gate.py" = ["B"]
"src/hft_platform/strategy/base.py" = ["B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
disable_error_code = ["import-untyped"]
files = [
    "src/hft_platform/contracts",
    "src/hft_platform/events.py",
    "src/hft_platform/execution",
    "src/hft_platform/order",
    "src/hft_platform/strategy",
    "src/hft_platform/services",
    "src/hft_platform/engine",
    "src/hft_platform/feed_adapter/normalizer.py",
    "src/hft_platform/feed_adapter/lob_engine.py",
    "src/hft_platform/risk",
    "src/hft_platform/utils/metrics.py",
    "src/hft_platform/config/loader.py",
    "src/hft_platform/alpha",
    "src/hft_platform/gateway",
]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = [
    "hft_platform.risk.*",
    "hft_platform.order.*",
    "hft_platform.execution.*",
    "hft_platform.contracts.*",
]
disallow_untyped_defs = true

[tool.uv]
# Broker SDKs are mutually exclusive extras.
conflicts = [
    [{ extra = "shioaji-broker" }, { extra = "fubon" }],
]

# fubon-neo is not on PyPI (distributed via Fubon's private index).
# Override it to an empty constraint so the lockfile resolver succeeds.
# Users install fubon-neo manually: pip install fubon-neo>=2.2.7
override-dependencies = ["fubon-neo>=0.0.0; python_version == '0'"]
