
[package]
name = "rust_strategy"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_strategy"
crate-type = ["cdylib", "rlib"]

[dependencies]
# hftbacktest = "..." 
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
anyhow = "1.0"
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
