[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]

pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
numpy = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
memmap2 = "0.7" # For Shared Memory mapping
